docs/css/app.css
* {
  box-sizing: border-box;
}

html {
  width: 100%;
  height: 100%;
  min-width: 1024px;
  font-family: 'OpenSans', sans-serif; }
  html body {
    position: relative;
    margin: 0;
    padding: 0;
    min-width: 1024px; }
    html body a {
      color: #ef5ba1;
      text-decoration: none; }
  html .read-more {
    font-size: .7em;
    color: #ef5ba1; }
  html .read-more::after {
    content: 'Show More';
    cursor: pointer;
    text-decoration: underline;
    font-weight: 700; }
  html .toggle:checked ~ label::after {
    content: 'Show Less'; }
  html .toggle {
    display: none;
    visibility: hidden; }
  html .link {
    text-decoration: underline; }

.header {
  background: rgba(255, 255, 255, 0.9);
  position: fixed;
  height: 80px;
  width: 100%;
  z-index: 1;
  padding: 0;
  top: 0;
  left: 0;
  right: 0; }
  .header a {
    text-decoration: none;
    color: #ef5ba1;
    -webkit-transition: left 0.5s ease;
    -moz-transition: left 0.5s ease;
    transition: left 0.5s ease; }
  .header .nav-bar {
    width: 1024px;
    display: flex;
    position: relative;
    top: 15px;
    bottom: 15px;
    margin: auto; }
    .header .nav-bar .logo-section {
      display: flex;
      flex: 1 1 50%; }
      .header .nav-bar .logo-section .logo {
        background: url("../img/geek_night_logo.svg") no-repeat;
        background-size: 140px;
        height: 65px;
        width: 160px; }
    .header .nav-bar .menu {
      display: flex;
      align-items: center;
      flex: 1 1 40%; }
      .header .nav-bar .menu-item {
        flex: 1 1 25%; }
      .header .nav-bar .menu .active a {
        border-bottom: 5px solid #ef5ba1;
        padding-bottom: 5px; }

.shadow {
  box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2); }

.intro {
  position: relative;
  display: flex;
  flex-flow: column;
  min-height: 500px;
  text-align: center;
  padding-top: 100px; }
  .intro .banner {
    flex: 1 1 60%;
    background: url("../img/intro_background.jpg") center center no-repeat;
    background-size: 100%; }
    .intro .banner-overlay {
      margin: auto;
      height: 360px;
      width: 620px;
      position: absolute;
      top: 100px;
      bottom: 0;
      right: 0;
      left: 0; }
    .intro .banner .mask {
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      position: absolute;
      overflow: hidden; }
      .intro .banner .mask .blur {
        position: absolute;
        background-color: rgba(255, 255, 255, 0.8);
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        filter: blur(2px); }
  .intro-info {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0; }
    .intro-info-place-title {
      font-size: 33px;
      font-weight: 800;
      margin: 0 70px;
      padding-top: 20px; }
    .intro-info-edition {
      padding-top: 15px;
      font-size: 18px;
      font-weight: bold; }
      .intro-info-edition sup {
        font-size: 14px; }
    .intro-info-date {
      font-size: 24px;
      font-weight: bold;
      padding-bottom: 20px; }
      .intro-info-date sup {
        font-size: 18px; }
    .intro-info-buttons {
      display: flex;
      flex-flow: row nowrap;
      justify-content: center; }
      .intro-info-buttons-button {
        border-radius: 4px;
        border: 1px solid transparent;
        width: 220px;
        cursor: pointer;
        padding: 0 20px 20px 20px; }
        .intro-info-buttons-button-text {
          height: 60px;
          font-size: 24px;
          font-weight: bold;
          line-height: 60px;
          border-radius: 4px;
          background-color: #1a73ba;
          color: #fff; }
        .intro-info-buttons-button-sub-text {
          color: #000;
          font-style: italic;
          font-size: 14px;
          padding: 5px; }
    .intro-info-subnote {
      display: flex;
      justify-content: center;
      padding: 20px; }
      .intro-info-subnote .youtube {
        background: url("../img/youtube-logo.svg") center no-repeat;
        background-size: 70px;
        flex: 0 1 15%; }
  .intro .line {
    border-top: 1px solid;
    margin: 0 50px; }

.agenda-heading {
  height: 90px;
  line-height: 90px;
  text-align: center;
  background-color: #6a2569; }
  .agenda-heading-text {
    font-size: 36px;
    font-weight: 800;
    color: #000;
    text-transform: uppercase;
    color: #fff; }
.agenda .content {
  margin: 0 0 50px 0; }
  .agenda .content .speakers {
    margin: 0px auto;
    min-width: 1024px;
    width: 1024px; }
    .agenda .content .speakers .speaker-details {
      display: flex;
      flex-flow: row wrap;
      align-items: center;
      border-bottom: 1px solid #000;
      padding: 20px 30px; }
      .agenda .content .speakers .speaker-details .time {
        flex: 1 1 20%;
        padding-top: 5px;
        font-weight: 800;
        text-transform: uppercase;
        align-self: center; }
      .agenda .content .speakers .speaker-details .speaker-detail, .agenda .content .speakers .speaker-details .workshop-detail {
        flex: 1 1 80%; }
        .agenda .content .speakers .speaker-details .speaker-detail .img, .agenda .content .speakers .speaker-details .workshop-detail .img {
          border-radius: 32px;
          width: 40px;
          height: 40px;
          margin: 5px 5px 5px 0; }
        .agenda .content .speakers .speaker-details .speaker-detail .title, .agenda .content .speakers .speaker-details .workshop-detail .title {
          color: #ef5ba1;
          font-size: 20px;
          font-weight: bold;
          display: block; }
        .agenda .content .speakers .speaker-details .speaker-detail .title-default, .agenda .content .speakers .speaker-details .workshop-detail .title-default {
          color: #000;
          font-size: 20px;
          font-weight: bold; }
/* ... */

